trying to fix logo not working on firefox mobile

--- a/src/components/page/Section/Section.module.scss
+++ b/src/components/page/Section/Section.module.scss
@@ -190,6 +190,7 @@ $sectionPaddingCompensation: 32px*2;
                 width: 100%;
                 max-width: min-content;
                 max-height: 250px;
+                min-width: 185px;
                 min-height: 100px;
                 height: unset;
             }
